--- a/penz/src/css/penz.css
+++ b/penz/src/css/penz.css
@@ -2,6 +2,19 @@
   text-decoration: none;
 }
 
+.text-primary {
+  color: #1f2b43 !important;
+}
+
+.primary {
+  color: #1f2b43 !important;
+}
+
+.btn-primary {
+  background-color: #1f2b43 !important;
+  border: #1f2b43 !important;
+}
+
 .topo {
   position: relative;
   width: 100%;
@@ -175,4 +188,26 @@ button {
 }
 .single-footer-widget .social_widget a:hover {
   background: #3fcaff;
+}
+
+#myCarousel .list-inline {
+  white-space: nowrap;
+  overflow-x: auto;
+}
+
+#myCarousel .carousel-indicators {
+  position: static;
+  left: initial;
+  width: initial;
+  margin-left: initial;
+}
+
+#myCarousel .carousel-indicators > li {
+  width: initial;
+  height: initial;
+  text-indent: initial;
+}
+
+#myCarousel .carousel-indicators > li.active img {
+  opacity: 0.7;
 }
