--- a/penz/src/css/penz.css
+++ b/penz/src/css/penz.css
@@ -158,6 +158,11 @@ button {
 }
 .footer_area {
   background: linear-gradient(to right, #000 0%, #163d54 100%);
+  color: #fff !important;
+}
+a {
+  text-decoration: none;
+  color: #fff !important;
 }
 .single-footer-widget {
   padding: 30px 0;
