--- a/penz/src/css/penz.css
+++ b/penz/src/css/penz.css
@@ -160,7 +160,7 @@ button {
   background: linear-gradient(to right, #000 0%, #163d54 100%);
   color: #fff !important;
 }
-a {
+footer a {
   text-decoration: none;
   color: #fff !important;
 }
